fix: board size overflow

--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,12 @@ main {
 
 .container {
   background-color: var(--secondary-bg-color);
-  height: 100%;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  width: fit-content;
+  padding: 0 1em;
   border-radius: 0.25em;
 }
 
@@ -62,8 +66,9 @@ main {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  width: 98%;
   padding: 0.5em 0;
-  margin: 0 1em;
+  margin-bottom: 1em;
   border-bottom: 1px solid var(--primary-bg-color);
 }
 
@@ -85,12 +90,8 @@ main {
 }
 
 .board {
-  height: calc(100% - 3.5em);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto 0;
+  display: table;
+  padding-bottom: 1em;
 }
 
 .board-row {
